name:                psbt
version:             0.1.0.0
synopsis:            Package manager for PureScript
homepage:            http://github.com/lightandlight/ppm#readme.md
license:             BSD3
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PSBT.Bower
                       , PSBT.SemVer
  other-modules:       PSBT.SemVer.Range
                       , PSBT.SemVer.Util
                       , PSBT.SemVer.Version
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , aeson-better-errors
                       , bytestring
                       , directory
                       , megaparsec
                       , unordered-containers
                       , text
                       , transformers

executable psbt
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , HTTP
                       , aeson
                       , bytestring
                       , directory
                       , megaparsec
                       , network-uri
                       , optparse-applicative
                       , process
                       , psbt
                       , text
                       , transformers
                       , unordered-containers

test-suite psbt-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Test.hs
  build-depends:       base
                       , QuickCheck
                       , megaparsec
                       , psbt
                       , test-framework
                       , test-framework-quickcheck2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
